@@ -1,2 +1,4 @@
 # ta-newsX
 Creating my own version of NewsX (Wunderwald, 2011) for my last project
+
+run server : java --add-modules java.se.ee -mx4g -cp "*" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -port 9000 -timeout 15000
